tests/script_errors/invalid_extractor/error.txt
Invalid tilde predicate pattern: regex parse error:
    (
    ^
error: unclosed group
